(svn/unreleased)

- Modification [developer's name]

1.5a2 (svn/unreleased)

- Better handling of empty FormDateField values, which were plagued by errors casting
  to DateTime format and if successful an invalid xsd:dateTime format.  This resolves:
  http://plone.org/products/salesforcepfgadapter/issues/6
  http://plone.org/products/salesforcepfgadapter/issues/5 
  Note: If a FormDateField was a required field and therefore came through as expected
  in the request, this was handled properly [andrewb, thanks greenstork for bug report]

- Adding support for PloneFormGen's FormFileField type to be populated with a binary 
  file and uploaded directly to Salesforce.com upon proper base64 encoding. There may 
  be other use cases, but the Attachment type in Salesforce can be associated 
  with any other type, as related by the ParentId, field and is where binary data, 
  stored on the Body field, is typically associated with a record. [andrewb]

- In order to reduce the configuration burden upon the user (i.e. placing Salesforce 
  Adapters in the order they will need to operate), we build and run adapters from 
  the final adapter within the folder.  This adapter in turn manages the needed 
  order and creates the Salesforce records appropriately.  The 1.5a1 release, 
  however, does not account for disabled adapters.  I.E. those that are checked 
  off in the form folder's adapter field. This is now fixed. See 
  http://plone.org/products/salesforcepfgadapter/issues/3 [andrewb]

- In the same category as the following issue: 
  http://plone.org/products/salesforcepfgadapter/issues/3, we need to account 
  for those adapters with an "execCondition" that fails. This is now fixed. See 
  http://plone.org/products/salesforcepfgadapter/issues/4 [andrewb]


1.5a1

- Adding new DataGridField FixedColumn with visibility set to false for the
  the 'fieldMap' schema field on the Salesforce Adapter, which stores the relative